<resources>
    <string name="enter_message">Enter your message here</string>
    <string name="enter_reply">Enter your reply here</string>
    <string name="send">Send</string>
    <string name="reply">Reply</string>
    <string name="message_receive">Message Receive</string>
    <string name="reply_receive">Reply Receive</string>
    <string name="placeholder_message">"Please enter message</string>
    <string name="placeholder_reply">"Please enter reply</string>
    <string name="website">Website</string>
    <string name="enter_url_website">Please enter link website</string>
    <string name="android_website">https://developer.android.com/</string>
    <string name="open_website">Open Website</string>
    <string name="clear_input">Clear Input</string>
    <string name="location">Location</string>
    <string name="enter_location">Please enter location</string>
    <string name="hoi_an">Hội An</string>
    <string name="open_location">Open Location</string>
    <string name="text_messaging">Text Messaging</string>
    <string name="enter_text_message">Please enter message</string>
    <string name="how_are_you_today">How are you today?</string>
    <string name="send_message">Send Message</string>
    <string name="please_enter_website">Please enter website</string>
    <string name="please_enter_location">Please enter location</string>
    <string name="please_enter_message">Please enter message</string>
    <string name="english">English</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="japanese">日本語</string>
    <string name="fun_fact_about_cat">Fun Fact About Cat</string>
    <string name="vietnamese_interesting_facts_about_cat">Những sự thật thú vị về mèo</string>
    <string name="vietnamese_fact_about_cat_1">➊ Mèo đã được thuần hóa từ khoảng 9.000 năm trước và trở thành một trong những thú cưng phổ biến nhất trên thế giới.</string>
    <string name="vietnamese_fact_about_cat_2">➋ Mèo có khả năng nghe tốt hơn người. Chúng có khả năng nghe nhạy bén trong khoảng 48kHz, trong khi con người chỉ nghe được khoảng 20kHz.</string>
    <string name="vietnamese_fact_about_cat_3">➌ Mèo có một loại hình vân trên mũi mà không hai con nào giống nhau, giống như một vân tay độc đáo.</string>
    <string name="vietnamese_fact_about_cat_4">➍ Chúng thích nằm ở những nơi ấm áp và cao hơn. Điều này xuất phát từ hành vi tự nhiên của mèo trong tự nhiên để bảo vệ khỏi con mồi tiềm năng.</string>
    <string name="vietnamese_fact_about_cat_5">➎ Lưỡi của mèo có những móc nhỏ giúp chúng lấy bắt và nuốt thức ăn dễ dàng. Mèo cũng dùng lưỡi để làm sạch lông và giữ vệ sinh cơ thể.</string>
    <string name="english_interesting_facts_about_cat">Fun fact about cat</string>
    <string name="english_fact_about_cat_1">➊ Cats were domesticated around 9,000 years ago and have become one of the most popular pets in the world.</string>
    <string name="english_fact_about_cat_2">➋ Cats have better hearing than humans. They can hear sounds in the range of approximately 48kHz, while humans can only hear up to around 20kHz.</string>
    <string name="english_fact_about_cat_3">➌ Cats have a unique pattern on their nose that is like a fingerprint, and no two cats have the same pattern.</string>
    <string name="english_fact_about_cat_4">➍ They prefer to rest in warm and elevated places. This behavior stems from the natural instinct of cats in the wild to protect themselves from potential prey.</string>
    <string name="english_fact_about_cat_5">➎ Their tongues have small hooks that help them catch and swallow food easily. Cats also use their tongues to groom their fur and keep themselves clean.</string>
    <string name="japanese_interesting_facts_about_cat">猫について面白いこと</string>
    <string name="japanese_fact_about_cat_1">➊ 猫は約9,000年前に家畜化され、世界で最も人気のあるペットの一つとなりました。</string>
    <string name="japanese_fact_about_cat_2">➋ 猫は人間よりも優れた聴覚を持っています。彼らは約48kHzの音を聞くことができ、人間は約20kHzまでしか聞くことができません。</string>
    <string name="japanese_fact_about_cat_3">➌ 猫の鼻には指紋のような独特の模様があり、二匹の猫で同じ模様はありません。</string>
    <string name="japanese_fact_about_cat_4">➍ 彼らは暖かくて高い場所で休むことを好みます。これは野生の猫の自然な本能から来るものであり、潜在的な獲物から身を守るためです。</string>
    <string name="japanese_fact_about_cat_5">➎ 彼らの舌には小さなフックがあり、食べ物を捕まえて飲み込むのに役立ちます。猫はまた、自分の毛を手入れし清潔に保つために舌を使います。</string>
    <string name="question_article">LIKE THIS ARTICLE?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="yes_message">Like</string>
    <string name="no_message">Thanks</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="vietnamese_species_cat">Các giống mèo phổ biến hiện nay</string>
    <string name="vietnamese_species_cat_1">➊ Mèo Xiêm</string>
    <string name="vietnamese_species_cat_2">➋ Mèo Anh lông dài</string>
    <string name="vietnamese_species_cat_3">➌ Mèo Anh lông ngắn</string>
    <string name="vietnamese_species_cat_4">➍ Mèo tai cụp</string>
    <string name="vietnamese_species_cat_5">➎ Mèo Mướp</string>
    <string name="btn_vietnamese_view_detail">Chi tiết</string>
    <string name="english_species_cat">Common cat breeds today</string>
    <string name="english_species_cat_1">➊ Siamese cat</string>
    <string name="english_species_cat_2">➋ Maine Coon cat</string>
    <string name="english_species_cat_3">➌ British Shorthair cat</string>
    <string name="english_species_cat_4">➍ Scottish Fold cat</string>
    <string name="english_species_cat_5">➎ Tabby cat</string>
    <string name="btn_english_view_detail">Detail</string>
    <string name="japanese_species_cat">現在一般的な猫の品種 </string>
    <string name="japanese_species_cat_1">➊ シャム猫 </string>
    <string name="japanese_species_cat_2">➋ メインクーン猫</string>
    <string name="japanese_species_cat_3">➌ ブリティッシュショートヘア猫</string>
    <string name="japanese_species_cat_4">➍ スコティッシュフォールド猫</string>
    <string name="japanese_species_cat_5">➎ タビー猫</string>
    <string name="btn_japanese_view_detail">詳細</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="vietnamese_title_species_cat_1">Mèo Xiêm</string>
    <string name="vietnamese_title_species_cat_2">Mèo Anh lông dài</string>
    <string name="vietnamese_title_species_cat_3">Mèo Anh lông ngắn</string>
    <string name="vietnamese_title_species_cat_4">Mèo tai cụp</string>
    <string name="vietnamese_title_species_cat_5">Mèo Mướp</string>
    <string name="english_title_species_cat_1">Siamese cat</string>
    <string name="english_title_species_cat_2">Maine Coon cat</string>
    <string name="english_title_species_cat_3">British Shorthair cat</string>
    <string name="english_title_species_cat_4">Scottish Fold cat</string>
    <string name="english_title_species_cat_5">Tabby cat</string>
    <string name="japanese_title_species_cat_1">シャム猫</string>
    <string name="japanese_title_species_cat_2">メインクーン猫</string>
    <string name="japanese_title_species_cat_3">ブリティッシュショートヘア猫</string>
    <string name="japanese_title_species_cat_4">スコティッシュフォールド猫</string>
    <string name="japanese_title_species_cat_5">タビー猫</string>
    <string name="vietnamese_detail_fact_1_cat_1">➊ Mèo Xiêm có nguồn gốc từ Thái Lan. Có 2 dòng mèo chính là mèo hiện đại và mèo truyền thống. Trong khi mèo truyền thống có thân hình đầy đặn, khá mập, khuôn mặt to tròn thì mèo hiện đại có thân hình dài, thon gọn, mảnh mai với khuôn mặt đẹp và thon.</string>
    <string name="vietnamese_detail_fact_2_cat_1">➋ Lông mèo Xiêm ngắn, dày với những màu sắc độc đáo và lạ mắt. Mèo Xiêm được biết là giống mèo hiền lành, thân thiện, cực kỳ thông minh và nhanh nhẹn.</string>
    <string name="vietnamese_detail_fact_3_cat_1">➌ Tùy thuộc vào xuất xứ cũng như độ thuần chủng mà giá bán của chúng dao động từ 1 – 2 triệu</string>
    <string name="vietnamese_detail_fact_1_cat_2">➊ Có xuất xứ từ vương quốc Anh, nổi bật với bộ lông dài xinh đẹp và mềm mượt trông khá giống chó lông xù của Nhật. Được đánh giá là loài mèo cảnh đẹp, xinh xắn, có phần đầu to tròn, má rộng.</string>
    <string name="vietnamese_detail_fact_2_cat_2">➋ Màu sắc lông khá đa dạng, phổ biến là màu xám xanh hoặc các màu khác như đen, trắng, đỏ, kem, tím hoa cà.. Lúc nhỏ, chúng rất hiếu động thích chạy nhảy, đùa nghịch nhưng tới tuổi trưởng thành thì trầm tính hơn. Chăm sóc mèo bạn cần chú ý tới chăm sóc lông, nên dùng loại sữa tắm riêng cho mèo cảnh lông dài.</string>
    <string name="vietnamese_detail_fact_3_cat_2">➌ Tùy vào màu lông mà giá mèo dao động từ 1,5 – 4 triệu đồng</string>
    <string name="vietnamese_detail_fact_1_cat_3">➊ Mèo Anh lông ngắn được tìm mua nhiều nhất ở nước ta hiện nay bởi khả năng thích nghi với khí hậu Việt Nam. Tuy lông của chúng ngắn nhưng rất dày, giữ ấm cho cơ thể trong những ngày đông.</string>
    <string name="vietnamese_detail_fact_2_cat_3">➋ Màu lông chủ yếu là màu xám, tabby, silver. Giống mèo này có phần đầu khá to, mắt tròn, bàn chân mũm mĩm tròn xoe, sự đáng yêu và lười biếng của chúng làm cho bao con sen thích thú.</string>
    <string name="vietnamese_detail_fact_3_cat_3">➌ Giá một bé mèo Anh lông ngắn rơi vào khoảng từ 3 – 6 triệu đồng</string>
    <string name="vietnamese_detail_fact_1_cat_4">➊ Đến từ Scotland, những chú mèo Scottish Fold có đôi tai cụp, ngoại hình dễ thương đã làm điên đảo hội những người yêu mèo. Màu lông của chúng khá phong phú, phổ biến là màu tabby, trắng, socola.</string>
    <string name="vietnamese_detail_fact_2_cat_4">➋ Một trong những lý do mà người ta thích chúng có lẽ đó là do tính quấn chủ, ngọt ngào của chúng. Những chú mèo tai cụp có tuổi thọ khá cao, từ 12–15 tuổi.</string>
    <string name="vietnamese_detail_fact_3_cat_4">➌ Giá bán khoảng 3.5 – 12 triệu tùy theo loại và các giấy tờ đi kèm</string>
    <string name="vietnamese_detail_fact_1_cat_5">➊ Bộ lông sọc vằn với nhiều đường vân có màu sắc khác nhau, chủ yếu là màu xám, tối và đen tạo nên nét đặc trưng cho loài mèo này. Đặc biệt trên trán chúng có phần lông chữ M rõ nét. Thân hình nhỏ nhắn, cực đáng yêu.</string>
    <string name="vietnamese_detail_fact_2_cat_5">➋ Mèo mướp rất năng động, yêu thích hoạt động, tinh nghịch nhưng lại rất thông minh. Chúng rất dễ nuôi, thích ngủ ban ngày, ít cần sự chăm sóc bởi tính tự lập rất cao.</string>
    <string name="vietnamese_detail_fact_3_cat_5">➌ Những chú mèo mướp hiện được bán với giá 150 – 200 trăm nghìn VNĐ</string>
    <string name="english_detail_fact_1_cat_1">➊ The Siamese cat originated from Thailand. There are two main lines of Siamese cats: modern Siamese and traditional Siamese. While traditional Siamese cats have a sturdy, somewhat chubby body and a round face, modern Siamese cats have a long, slim, and sleek body with a beautiful and slender face.</string>
    <string name="english_detail_fact_2_cat_1">➋ The coat of Siamese cats is short, thick, and comes in unique and striking colors. Siamese cats are known for being gentle, friendly, highly intelligent, and agile.</string>
    <string name="english_detail_fact_3_cat_1">➌ The price of Siamese cats can vary from 1 to 2 million Vietnamese Dong, depending on their origin and pedigree.</string>
    <string name="text_choosing_item">Bạn đã chọn cà phê sữa phin</string>
    <string name="text_full_name">Họ và tên</string>
    <string name="text_email">Email</string>
    <string name="text_birth_date">Ngày sinh</string>
    <string name="text_phone">SDT</string>
    <string name="text_address">Địa chỉ</string>
    <string name="placeholder_full_name">Nhập họ và tên</string>
    <string name="placeholder_email">Nhập email</string>
    <string name="placeholder_address">Nhập địa chỉ</string>
    <string name="jan_01_2000">JAN 01 2000</string>
    <string name="placeholder_phone">Nhập SĐT</string>
</resources>