<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ImplicitIntentActivity">

    <TextView
        android:id="@+id/tv_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:text="@string/website"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/sp_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <EditText
        android:id="@+id/et_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:autofillHints=""
        android:hint="@string/enter_url_website"
        android:inputType="text"
        android:minHeight="@dimen/dp_48"
        android:text="@string/android_website"
        app:layout_constraintTop_toBottomOf="@+id/tv_website"
        app:layout_constraintVertical_bias="0.448"
        tools:layout_editor_absoluteX="@dimen/dp_0" />

    <Button
        android:id="@+id/btn_open_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_website"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/btn_clear_input_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212"
        tools:ignore="ButtonStyle" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_260"
        android:text="@string/location"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/sp_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_4"
        android:autofillHints=""
        android:hint="@string/enter_location"
        android:inputType="text"
        android:minHeight="@dimen/dp_48"
        android:text="@string/hoi_an"
        app:layout_constraintTop_toBottomOf="@+id/tv_location"
        tools:layout_editor_absoluteX="@dimen/dp_27" />

    <Button
        android:id="@+id/btn_open_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/btn_clear_input_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594"
        tools:ignore="ButtonStyle" />

    <TextView
        android:id="@+id/tv_text_messaging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_180"
        android:text="@string/text_messaging"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/sp_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_text_messaging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_120"
        android:autofillHints=""
        android:hint="@string/enter_text_message"
        android:inputType="text"
        android:minHeight="@dimen/dp_48"
        android:text="@string/how_are_you_today"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="@dimen/dp_30" />

    <Button
        android:id="@+id/btn_send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/btn_clear_input_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898"
        tools:ignore="ButtonStyle" />
</androidx.constraintlayout.widget.ConstraintLayout>
