<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_japanese_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".EnglishFragment"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/imageCat"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_200"
        android:contentDescription="@string/fun_fact_about_cat"
        android:src="@drawable/cat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_japanese_interesting_fact_about_cat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:text="@string/japanese_interesting_facts_about_cat"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375"
        tools:ignore="VisualLintOverlap"
        tools:layout_editor_absoluteX="@dimen/dp_0" />

    <TextView
        android:id="@+id/tv_japanese_fact_about_cat_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:text="@string/japanese_fact_about_cat_1"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449"
        tools:layout_editor_absoluteX="@dimen/dp_0" />

    <TextView
        android:id="@+id/tv_japanese_fact_about_cat_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:text="@string/japanese_fact_about_cat_2"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542"
        tools:ignore="VisualLintLongText"
        tools:layout_editor_absoluteX="@dimen/dp_23" />

    <TextView
        android:id="@+id/tv_japanese_fact_about_cat_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:text="@string/japanese_fact_about_cat_3"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageCat"
        app:layout_constraintVertical_bias="0.626" />

    <TextView
        android:id="@+id/tv_japanese_fact_about_cat_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:text="@string/japanese_fact_about_cat_4"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714"
        tools:ignore="VisualLintLongText"
        tools:layout_editor_absoluteX="@dimen/dp_23" />

    <TextView
        android:id="@+id/tv_japanese_fact_about_cat_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:text="@string/japanese_fact_about_cat_5"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageCat"
        app:layout_constraintVertical_bias="0.81"
        tools:ignore="VisualLintLongText" />

</androidx.constraintlayout.widget.ConstraintLayout>
